2005-05-09  Jeremy Cribb <jcribb@email.unc.edu>
	* rows.m:  stupid typo.

2005-05-09  Jeremy Cribb <jcribb@email.unc.edu>
	* rows.m:  added.  returns the number or rows in a matrix.

2005-01-03  Jeremy Cribb <jcribb@email.unc.edu>
        * pretty_plot.m: fixed case-sensitive typo; jcribb

2004-06-18  Kalpit Desai <kvdesai@cs.unc.edu>
	* Added a file unixUtc.m: Takes time in YYYY-MM-DD-hh-mm-ss.sssss format and converts it to the unix time
(toal number of seconds elapsed since 1970/01/01 midnight). The output is adjusted assuming that the input time is the local time
at NC, USA or Eastern Standard Time zone. This file is useful in comparing various matlab timestamps to tracking data time stamps.
2004-05-18  Jeremy Cribb <jcribb@email.unc.edu>

	* Initial Version
